April 2011 3.4.0
  - Mail aliases: sort receipients (RFE 3170336)
  - LAM Pro:
   -> support automount entries
   -> Zarafa groups: allow combination with group of names


12.02.2011 3.3.0
  - additional usability enhancements
  - new IMAP module ("Mailbox (imapAccess)") allows to create/delete user mailboxes
  - LAM Pro: enhanced Zarafa to support users and groups for "Send as" (new configuration option)
  - PDF export: higher resolution for logos
  - reduced number of LDAP queries
  - lamdaemon: support journaled quotas
  - fixed bugs:
   -> ignore comment lines in shells file (3107124)
   -> home directory creation on file upload
  

28.10.2010 3.2.0
  - large usability enhancements
  - Shadow: allow to force password change when maximum password age is set
  - DHCP: renamed module "Fixed IPs" to "Hosts", IP is now optional (3038797)
  - PHP version 5.2.4 or higher required
  - LAM Pro:
   -> Zarafa support (user, group, server)
   -> Password policy: allow to force password change (RFE 3026940)
   -> Password reset page: mail subject, text and from address can be set in server profile
   -> Self service: Asterisk (voicemail) password synchronisation
  - Fixed bugs:
   -> Email check did not include "+" (3033605)
   -> Tab index on login page (3042622)


04.07.2010 3.1.1
  - LAM Pro: fix for user self service


25.06.2010 3.1.0
  - usability improvements
  - Asterisk voicemail support
  - new hosts module for user accounts to define valid login workstations (replaces inetOrgPerson schema hack) (2951116)
  - PDF editor: descriptive fields
  - lamdaemon:
   -> sudo entry needs to be changed to ".../lamdaemon.pl *"
   -> replaced PHP SSH2 with phpseclib
  - LAM Pro
   -> custom scripts: new options to hide executed commands and define if output is HTML or plain text
   -> support sudo entry management (object class sudoRole)
  - fixed bugs:
   -> Asterisk password handling (patch 2979728)
   -> Samba domain SID check (2994528)