@@ -3,6 +3,8 @@ April 2011 3.4.0
   - LAM Pro:
    -> support automount entries
    -> Zarafa groups: allow combination with group of names
+  - fixed bugs:
+   -> renaming of default profile (3183920)
 
 
 12.02.2011 3.3.0
